# autoclip

./: Cargo.toml  README.md
src/: cli.rs  config.rs  main.rs  utils.rs
src/audio/: analyzer.rs
src/ml/: inference.rs
src/video/: analyzer.rs  editor.rs  extractor.rs  mod.rs
