[package]
name = "autoclip"
version = "0.1.0"
edition = "2024"
authors = ["Alexandre Trotel <trotelalexandre@proton.me>"]
description = "Automatic video editor that trims blank/silent segments and highlights best moments"
license = "MIT"
repository = "https://github.com/alexandretrotel/autoclip"

[[bin]]
name = "autoclip"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
env_logger = "0.11.8"
ffmpeg-next = "8.0.0"
hound = "3.5.1"
log = "0.4.28"
opencv = { version = "0.95.1", features = ["clang-runtime"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
